CouchbaseConnectorTest all PASS (or skipped)